--- a/vente/templates/about-us.html
+++ b/vente/templates/about-us.html
@@ -280,7 +280,7 @@
                         <div class="section-icon wow zoomIn" data-wow-delay=".4s">
                             <i class="lni lni-users"></i>
                         </div>
-                        <h2 class="wow fadeInUp" data-wow-delay=".4s">La presentation de notre equipe</h2>
+                        <h2 class="wow fadeInUp" data-wow-delay=".4s">La présentation de notre equipe</h2>
                         <p class="wow fadeInUp" data-wow-delay=".6s">Nous sommes une équipe passionnée et dévouée, composée de professionnels talentueux et créatifs, unis par notre engagement à fournir des solutions innovantes et de haute qualité pour répondre aux besoins de nos clients.</p>
                     </div>
                 </div>
@@ -372,7 +372,7 @@
                                     <!-- Info Box -->
                                     <div class="info-box">
                                         <span class="designation">Expert django </span>
-                                        <h4 class="name"><a href="teacher-details">M.Sédrisk kouagni</a></h4>
+                                        <h4 class="name"><a href="teacher-details">M.Sédrick kouagni</a></h4>
                                         <p>Your chance to be a trending expert in IT industries and make a successful
                                             career completion.</p>
                                     </div>
